# ndk-camerarecorder

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/camera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_filter.cpp  camera_filter.h  camera_preview_controller.cpp  camera_preview_controller.h  camera_preview_scheduler_caller.cpp  camera_preview_scheduler_caller.h  com_wind_ndk_camera_CameraPreviewScheduler.cpp  com_wind_ndk_camera_CameraPreviewScheduler.h  log.h  native-lib.cpp  preview_renderer.cpp  preview_renderer.h  screen_filter.cpp  screen_filter.h
app/src/main/cpp/camera_preview/: camera_filter.h  preview_renderer.cpp  preview_renderer.h
app/src/main/cpp/egl_core/: egl_core.h
app/src/main/cpp/encoder/: video_encoder_adapter.cpp  video_encoder_adapter.h
app/src/main/cpp/encoder/soft/: copy_texture_renderer.cpp  copy_texture_renderer.h  soft_encoder_adapter.cpp  soft_encoder_adapter.h  soft_video_encoder_adapter.cpp  x264_encoder.cpp  x264_encoder.h
app/src/main/cpp/handler/: CMakeLists.txt  loop_thread.h
app/src/main/cpp/libgles/: CMakeLists.txt
app/src/main/cpp/libgles/egl/: gl_offscreen_surface.cpp  gl_offscreen_surface.h  gl_surface.cpp  gl_surface.h  offscreen_surface.cpp  offscreen_surface.h
app/src/main/cpp/libgles/gles/: base_fbo_filter.cpp  base_fbo_filter.h  base_filter.cpp  base_filter.h  gl_shaders.h  gl_utils.cpp  rgb_to_yuy2_filter.cpp  rgb_to_yuy2_filter.h  texture.cpp
app/src/main/cpp/libs/blocking_queue/: CMakeLists.txt  array_blocking_queue.cpp  array_blocking_queue.h  blocking_queue.cpp  blocking_queue.h  linked_blocking_queue.cpp  linked_blocking_queue.h
app/src/main/cpp/libs/lock/: CMakeLists.txt  condition.cpp  condition.h  lock.cpp
app/src/main/cpp/message_queue/: handler.cpp  handler.h  message_queue.h
app/src/main/cpp/utils/: thread.cpp  thread.h
app/src/main/java/com/wind/ndk/camera/: CameraPreviewActivity.kt  CameraPreviewScheduler.kt  CameraPreviewView.kt  MainActivity.kt  VideoCamera.kt
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wind/ndk/camera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
